Spring version update